Fixed layout bugs of ticket

--- a/python-test/python-test.ui/src/components/ticket/ticket.fx.css
+++ b/python-test/python-test.ui/src/components/ticket/ticket.fx.css
@@ -4,7 +4,8 @@
     margin: 0 auto;
     text-transform: uppercase;
     padding: 8px;
-    width: 420px;
+    width: 100%;
+    max-width: 420px;
     font-weight: bold;
     text-shadow: 0 1px 0 #fff;
     font-family: "arvo";
